# Libgo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  books.db  main.py  pyproject.toml  todo.txt
app/core/: config.py  security.py
app/db/: session.py
app/dependencies/: auth.py
app/modules/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  service.py
app/modules/books/: repo.py  router.py  service.py
app/modules/chat/: routes.py  services.py
app/modules/email/: router.py  service.py
app/modules/staff/: models.py  router.py  schemas.py  service.py
app/utils/: hash_password.py
libgo-backup.git/: config  packed-refs
libgo-backup.git/objects/pack/: pack-6d3025db37a13334293840abfb536d076809120e.idx  pack-6d3025db37a13334293840abfb536d076809120e.pack  pack-6d3025db37a13334293840abfb536d076809120e.rev
src/: db.py
src/api/v1/: books.py
src/core/: config.py  logging.py
src/internal_api/: internal_api.py
src/internal_api/api/v1/: admin.py  auth.py  books.py  write_email.py
src/internal_api/repos/auth/: staff.py
src/internal_api/repos/books/: books_repo.py
src/internal_api/schema/: BooksSchema.py  StaffSchema.py
src/internal_api/services/admin/: manage_staff.py
src/internal_api/services/auth/: login_staff.py  login_superadmin.py  register_staff.py
src/internal_api/services/books/: add_book.py  delete_book.py  get_all_books.py  (+1 more)
src/repos/books/: books_repo.py
src/schema/: BooksSchema.py
src/services/books/: add_book.py  delete_book.py
src/services/email/: write_email.py
src/utils/: hash_password.py
