[project]
name = "libgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.0.0",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "bcrypt>=5.0.0",
    "fastapi-users>=15.0.4",
    "python-jose>=3.5.0",
    "uvicorn[standard]"
]
